# NICE

./: .gitignore  .gitmodules  CpuOperations.cc  Jason.txt  LICENSE  Name.rtf  README.md
cpp/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  configure.sh  doxygen_config
cpp/cling_test/: test_cpp.ipynb
cpp/cling_test/.ipynb_checkpoints/: test_cpp-checkpoint.ipynb
cpp/cmake/: check.cmake  doc.cmake  eigen.cmake  gtest.cmake
cpp/dlib/: CMakeLists.txt
cpp/dlib/matrix/: matrix_trsm.h
cpp/eigen/src/eigen-stamp/: download-eigen.cmake  eigen-urlinfo.txt  extract-eigen.cmake  verify-eigen.cmake
cpp/eigen/tmp/: eigen-cfgcmd.txt
cpp/gtest/tmp/: googletest-cfgcmd.txt  googletest-gitclone.cmake  googletest-gitupdate.cmake
cpp/include/: .gpu_operations.h.swo  acl.h  acl_profiler.h  alternative_spectral_clustering.h  alternative_spectral_clustering_old.h  cpu_operations.h  cuda_matrix_vector_multiply.h  cuda_matrix_vector_multiply_shared_memory.h  cuda_shared_MV_multiply.h  gpu_logistic_regression.h  gpu_operations.h  gpu_svd_solver.h  gpu_util.h  ism.h  ism_cpu.h  ism_gpu.h  kdac.h  kdac_cpu.h  kdac_cuda.h  kdac_gpu.h  kdac_profiler.h  kernel_types.h  kmeans.h  kmeans_gpu.h  linear_regression.h  logistic_regression.h  matrix.h  model.h  spectral_clustering.backup_h  spectral_clustering.h  stop_watch.h  svd_solver.h  timer.h  util.h  vector.h
cpp/interface/: CMakeLists.txt  cpu_operations_interface.h  interface.cc  py_interface.cc  py_interface.h
cpp/interface/clustering/: acl_interface.h  clustering.cc  clustering.h  kadc_interface.cc  kadc_interface.h  kdac_interface.h  kmeans_interface.h  spectral_interface.h
cpp/src/: nice_main.cc
cpp/src/core/: .TransposeTest.cc.swp  .cpu_operations.cc.swp  .matrix.h.swp  CommonMatrixOperationsInterface.h  CpuOperations.cpp  CpuOperations.h  GpuOperations.h  LogicalAndTest.cc  Makefile  Matrix.cpp  Matrix.h  TransposeTest.cc  TransposeTestClass.cc  TransposeTestClass2.cc  TransposeTestClassExample.cc  Util.cpp  Util.h  Vector.h  add_test  add_test.cpp  compile.sh  cpu_operations.cc  cpu_operations.h  executable  gpu_operations.h  gpu_svd_solver.cc  gpu_svd_solver.cu  matrix.h  svd_solver.cc  util.cc  util.h  vector.h
cpp/src/core/Transpose_Test/: EasyGTest.cc  Makefile  Transpose.cc  TransposeTest.cc  TransposeTestClass.cc  cpu_operations.cc  cpu_operations.h
cpp/src/core/gpu_util/: gpu_util.cu
cpp/src/cuda/: cuda_matrix_vector_multiply.cu  cuda_matrix_vector_multiply_shared.cu  cuda_matrix_vector_multiply_shared_memory.cu  cuda_shared_MV_multiply.cu  gpu_logistic_regression.cu  gpu_logistic_regression_global.cu  kdac_cuda.cu  kdac_gpu.cu  kmeans_gpu.cu
cpp/src/model/: spectral_clustering.cc  spectral_clustering.cc.backup
cpp/src/util/: gpu_util.cc  util.cc
cpp/standalone_build/: Makefile  build.sh  result.txt
cpp/test/: kdac_test.cc
cpp/test/LogisticRegressionBenchmark/: benchmark.cc
cpp/test/cpu_operations_test/: DotProduct_test.cc  Inverse_int_test.cc  Inverse_test.cc  LogicalAnd_test.cc  MatrixSubtract_test.cc  add_test.cc  center_test.cc  determinant_test.cc  frobenius_norm.cc  frobenius_norm_test.cc  gen_degree_matrix_test.cc  gen_kernel_matrix_test.cc  logical_and_test.cc  logical_not_test.cc  logical_or_test.cc  logistic_regression_test.cc  matrix_subtract_test.cc  multiply_test.cc  norm_test.cc  normalize_test.cc  outer_product_test.cc  rank_test.cc  standard_deviation_test.cc  standardize.backup  trace_test.cc  transpose_test.cc
cpp/test/cpu_solver_test/: cpu_svd_test.cc
cpp/test/data_for_test/: alt_spec_data_40_2.txt  matrix_10_2.txt
cpp/test/data_for_test/FromFile/: matrix_2_2.csv  matrix_2_2.txt  matrix_wrong_size.txt
cpp/test/data_for_test/kdac/: chieh_data.csv  data_4_corners.csv  data_gaussian.csv  data_gaussian_120_6_3.csv  data_gaussian_150_6_3.csv  data_gaussian_15_6_3.csv  data_gaussian_180_6_3.csv  data_gaussian_210_6_3.csv  data_gaussian_240_6_3.csv  data_gaussian_270_6_3.csv  data_gaussian_300_6_3.csv  data_gaussian_30_6_3.csv  data_gaussian_600_6_3.csv  data_gaussian_60_6_3.csv  data_gaussian_90_6_3.csv  data_gaussian_9_6_3.csv  data_matrix_40_2.txt  label1_gaussian_120_6_3.csv  label1_gaussian_15_6_3.csv  label1_gaussian_180_6_3.csv  label1_gaussian_210_6_3.csv  label1_gaussian_240_6_3.csv  label1_gaussian_270_6_3.csv  label1_gaussian_300_6_3.csv  label1_gaussian_30_6_3.csv  label1_gaussian_600_6_3.csv  label1_gaussian_60_6_3.csv  label1_gaussian_90_6_3.csv  label1_gaussian_9_6_3.csv  label2_gaussian_120_6_3.csv  label2_gaussian_150_6_3.csv  (+23 more)
cpp/test/gpu_logistic_regression_test/: gpu_logistic_regression_test.cc
cpp/test/gpu_operations_test/: cuda_matrix_vector_multiply_shared_memory.cc  cuda_matrix_vector_multiply_shared_memory_test.cc  inverse_test.cc  matrix_determinant_test.cc  matrix_determinant_test.temp  matrix_frobenius_norm_test.cc  matrix_frobinius_norm_test.cc  matrix_matrix_add_test.cc  matrix_matrix_multiply_test.cc  matrix_matrix_subtract_test.cc  matrix_multiply_test.cc  matrix_norm_test.cc  matrix_scalar_add_test.cc  matrix_scalar_multiply_test.cc  matrix_vector_multiply_test.cc  outer_product_test.cc  rank_test.cc  repeated_mutliplication.cc  trace_test.cc  vector_norm_test.cc  vector_outer_product_test.cc  vector_scalar_multiply_test.cc  vector_vector_dot_product.cc  vector_vector_dot_product_test.cc
cpp/test/gpu_solver_test/: gpu_svd_solver.cc  gpu_svd_test.cc  svd_test.cc
cpp/test/gpu_svd_solver_test/: gpu_svd_solver.cc
cpp/test/logistic_regression_test/: logistic_regression_test.cc
cpp/test/matrix_vector_mult_test/: matrix_vector_multiply_test.cc
cpp/test/model_test/: alternative_spectral_clustering_test.cc  gpu_logistic_regression_test.cc  kdac_test.cc  kmeans_test.cc  linear_regression_test.cc  logistic_regression_benchmark.cc  logistic_regression_test.cc  spectral_clustering_test.backup_cc  spectral_clustering_test.cc
cpp/test/shared_MV_mult_test/: cuda_shared_MV_multiply_test.cc
cpp/test/util_test/: from_file_test.cc  to_file_test.cc
cpp/tools/: Nice_test  has_cuda_gpu.c  make.sh  mkl_make.sh  run_test.sh
(+62 files in other folders)
